# ios-simulator-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  setup-and-config.md  tools-reference.md  troubleshooting.md
scripts/: run_server.sh  setup.sh  start_wda.sh  test_install.py
src/ios_simulator_mcp/: __init__.py  dashboard.py  server.py  simulator.py  ui_tree.py  wda_client.py
src/mobile_pilot_mcp/: __init__.py  dashboard.py  server.py
src/mobile_pilot_mcp/templates/: dashboard.html
tests/: test_server_contract.py
