[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ios-simulator-mcp"
version = "1.0.0"
description = "MCP server for iOS Simulator automation via WebDriverAgent. Control simulators from Claude, Cursor, and other AI assistants."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MobAI", email = "hello@mobai.run" }
]
keywords = ["mcp", "ios", "simulator", "automation", "webdriveragent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp==2.14.4",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
ios-simulator-mcp = "ios_simulator_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ios_simulator_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
